--- a/tests/defaults.conf
+++ b/tests/defaults.conf
@@ -1,5 +1,5 @@
 Placement_3D="
-/* [Placement] */
+/* [3D Placement] */
 
 X_PLACE = \"undef\";  // [undef,-1,0,+1]
 Y_PLACE = \"undef\";  // [undef,-1,0,+1]
@@ -15,13 +15,13 @@ fl_status();
 "
 
 Placement_2D="
-/* [Placement] */
+/* [2D Placement] */
 
-PLACE_NATIVE  = true;
-QUADRANT      = [+1,+1];  // [-1:+1]
+X_PLACE = \"undef\";  // [undef,-1,0,+1]
+Y_PLACE = \"undef\";  // [undef,-1,0,+1]
 "
 PROLOGUE_2D="
-quadrant    = PLACE_NATIVE  ? undef : QUADRANT;
+quadrant    = fl_parm_Quadrant(X_PLACE,Y_PLACE);
 debug       = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS);
 
 fl_status();
