--- a/tests/foundation/base_geo-test.conf
+++ b/tests/foundation/base_geo-test.conf
@@ -1,19 +1,10 @@
-/*
- * Base geometry test
- *
- * NOTE: this file is generated automatically from 'template-nogui.scad', any
- * change will be lost.
- *
- * Copyright © 2021, Giampiero Gabbiani <giampiero@gabbiani.org>
- *
- * SPDX-License-Identifier: GPL-3.0-or-later
- */
-
-
+TEST_DESCRIPTION="Base geometry test"
+TEST_TEMPLATE="template-nogui.scad"
+TEST_INCLUDES="
 include <../../lib/OFL/foundation/core.scad>
+"
 
-// end of automatically generated code
-
+TEST_CODE="
 let(
   vector  = [1.2,13,-4.5],
   versor  = fl_versor(vector)
@@ -38,3 +29,4 @@ let(
   a = [1,0,0],
   b = [2,0,0]
 ) assert(fl_isParallel(a,b));
+"
