--- a/tests/quadrant-test.conf
+++ b/tests/quadrant-test.conf
@@ -22,8 +22,7 @@ module do_square(primus=false) {
   }
 }
 
-if (PLACE_NATIVE)
-  do_square();
-#fl_2d_place(quadrant=QUADRANT,bbox=[FL_O,SIZE])
+do_square();
+#fl_2d_place(quadrant=quadrant,bbox=[FL_O,SIZE])
   do_square(true);
 "
