--- a/tests/foundation/2d-test.conf
+++ b/tests/foundation/2d-test.conf
@@ -64,7 +64,7 @@ verbs=[
 module ipoly() {
   fl_ipoly(verbs,RADIUS,n=IPOLY_N,quadrant=quadrant);
   if (IPOLY_CIRCLE)
-    fl_2d_placeIf(!PLACE_NATIVE,quadrant=QUADRANT,bbox=fl_bb_ipoly(r=RADIUS,n=IPOLY_N)) #fl_circle(FL_ADD,r=RADIUS);
+    fl_2d_placeIf(quadrant!=[undef,undef],quadrant=quadrant,bbox=fl_bb_ipoly(r=RADIUS,n=IPOLY_N)) #fl_circle(FL_ADD,r=RADIUS);
 }
 
 if      (PRIMITIVE == \"circle\"            ) fl_circle(verbs,r=RADIUS,quadrant=quadrant);
