--- a/tests/foundation/Makefile
+++ b/tests/foundation/Makefile
@@ -6,7 +6,8 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-SOURCES			= 2d_grid-test.scad 2d-test.scad 3d-test.scad 3d_funcs-test.scad
+SOURCES			= 2d_grid-test.scad 2d-test.scad 3d-test.scad 3d_funcs-test.scad algo-test.scad \
+assertions-test.scad base_geo-test.scad base_string-test.scad bend-test.scad bend2-test.scad
 RESULTS			= $(SOURCES:.scad=.echo)
 
 include $(DEF_RULES)
