--- a/tests/octant-test.conf
+++ b/tests/octant-test.conf
@@ -11,6 +11,6 @@ SIZE          = [1,2,3];
 "
 
 TEST_CODE="
-fl_placeIf(!PLACE_NATIVE,octant=OCTANT,bbox=[FL_O,SIZE])
+fl_placeIf(octant!=[undef,undef,undef],octant=octant,bbox=[FL_O,SIZE])
   cube(size=SIZE);
 "
