--- a/tests/foundation/connect-test.conf
+++ b/tests/foundation/connect-test.conf
@@ -1,34 +1,14 @@
-/*
- * Connection kit test
- *
- * NOTE: this file is generated automatically from 'template-3d.scad', any
- * change will be lost.
- *
- * Copyright © 2021, Giampiero Gabbiani <giampiero@gabbiani.org>
- *
- * SPDX-License-Identifier: GPL-3.0-or-later
- */
+TEST_DESCRIPTION="Connection kit test"
 
-
+TEST_INCLUDES="
 include <../../lib/OFL/foundation/connect.scad>
+"
 
+TAB_Verbs=""
+TAB_Placement=""
+TAB_Direction=""
 
-$fn            = 50;           // [3:100]
-// When true, debug statements are turned on
-$fl_debug      = false;
-// When true, disables PREVIEW corrections like FL_NIL
-$FL_RENDER     = false;
-// Default color for printable items (i.e. artifacts)
-$fl_filament   = "DodgerBlue"; // [DodgerBlue,Blue,OrangeRed,SteelBlue]
-// -2⇒none, -1⇒all, [0..)⇒max depth allowed
-$FL_TRACES     = -2;     // [-2:10]
-SHOW_LABELS     = false;
-SHOW_SYMBOLS    = false;
-
-
-
-
-
+TAB_TEST="
 /* [View] */
 
 VIEW_CONNECTORS = false;
@@ -40,7 +20,7 @@ VIEW_BALL       = true;
 /* [Socket] */
 
 // canonical view is solidal with the connector position and orientation
-SOCKET_VIEW     = "actual"; // [natural,canonical,actual]
+SOCKET_VIEW     = \"actual\"; // [natural,canonical,actual]
 SOCKET_ALPHA    = 120;      // [0:360]
 SOCKET_BETA     = 30;       // [0:360]
 SOCKET_DISTANCE = 6;        // [0:10]
@@ -48,33 +28,32 @@ SOCKET_DISTANCE = 6;        // [0:10]
 /* [Plug] */
 
 // canonical view is solidal with the connector position and orientation
-PLUG_VIEW       = "actual"; // [natural,canonical,actual]
+PLUG_VIEW       = \"actual\"; // [natural,canonical,actual]
+"
 
+TEST_PROLOGUE=""
 
-/* [Hidden] */
-
-// end of automatically generated code
-
+TEST_CODE="
 module __test__() {
   verbs=[
     FL_ADD,
   ];
 
   test_plug = [
-    ["name",  "test plug" ],
-    ["size",  [1.2,2,0.5] ],
-    ["plugs", [
-        conn_Plug(id="Test 220v AC ITA",ox=+X,oy=+Y,pos=[-0.4,-0.5,0])
+    [\"name\",  \"test plug\" ],
+    [\"size\",  [1.2,2,0.5] ],
+    [\"plugs\", [
+        conn_Plug(id=\"Test 220v AC ITA\",ox=+X,oy=+Y,pos=[-0.4,-0.5,0])
       ]
     ]
 
   ];
 
   test_socket=[
-    ["name",    "test socket" ],
-    ["size",    [2,0.5,1]     ],
-    ["sockets", [
-        conn_Socket(id="Test 220v AC ITA",ox=+X,oy=-Y,pos=[-0.7,0,0]),
+    [\"name\",    \"test socket\" ],
+    [\"size\",    [2,0.5,1]     ],
+    [\"sockets\", [
+        conn_Socket(id=\"Test 220v AC ITA\",ox=+X,oy=-Y,pos=[-0.7,0,0]),
       ]
     ]
   ];
@@ -83,34 +62,34 @@ module __test__() {
     rotate(SOCKET_BETA,X) rotate(SOCKET_ALPHA,Y) translate(X(SOCKET_DISTANCE)) children();
   }
 
-  // "plug": 'a piece that fits into a hole in order to close it'
+  // \"plug\": 'a piece that fits into a hole in order to close it'
   //        Its canonical form implies an orientation of the piece coherent
   //        with its insertion movement along +Z semi-axis.
   module plug(type,connectors=false,only=false) {
-    positions=fl_get(type,"plugs");
+    positions=fl_get(type,\"plugs\");
     t=positions[0];
 
-    size      = fl_get(type,"size");
-    plug      = fl_get(type,"plugs")[0];
+    size      = fl_get(type,\"size\");
+    plug      = fl_get(type,\"plugs\")[0];
     ox        = fl_conn_ox(plug);
     oy        = fl_conn_oy(plug);
     position  = fl_conn_pos(plug);
     M         = fl_planeAlign(X,Y,ox,oy)
               * T(position);
     if (!connectors || !only) {
-      fl_color("DarkSlateGray") fl_cube(size=size,octant=-Z);
-      fl_color("gold") multmatrix(M) spine();
+      fl_color(\"DarkSlateGray\") fl_cube(size=size,octant=-Z);
+      fl_color(\"gold\") multmatrix(M) spine();
     }
     if (connectors)
       multmatrix(M) fl_sym_plug();
   }
 
-  // "socket": 'a part of the body into which another part fits'
+  // \"socket\": 'a part of the body into which another part fits'
   //        Its canonical form implies an orientation of the piece coherent
   //        with its fitting movement along -Z semi-axis.
   module socket(type,connectors=false,only=false) {
-    size      = fl_get(type,"size");
-    socket    = fl_get(type,"sockets")[0];
+    size      = fl_get(type,\"size\");
+    socket    = fl_get(type,\"sockets\")[0];
     ox        = fl_conn_ox(socket);
     oy        = fl_conn_oy(socket);
     position  = fl_conn_pos(socket);
@@ -118,8 +97,8 @@ module __test__() {
               * T(position);
     if (!connectors || !only) {
       difference() {
-        fl_color("DarkSlateGray") fl_cube(size=size,octant=-Z);
-        fl_color("gold") translate(Z(FL_NIL)) multmatrix(M) spine();
+        fl_color(\"DarkSlateGray\") fl_cube(size=size,octant=-Z);
+        fl_color(\"gold\") translate(Z(FL_NIL)) multmatrix(M) spine();
       }
     }
     if (connectors)
@@ -141,11 +120,11 @@ module __test__() {
   }
 
   if (VIEW_SOCKET) {
-    if (SOCKET_VIEW=="natural")
+    if (SOCKET_VIEW==\"natural\")
       socket(test_socket,VIEW_CONNECTORS,CONNECTORS_ONLY);
-    else if (SOCKET_VIEW=="canonical")
+    else if (SOCKET_VIEW==\"canonical\")
       let(
-        socket    = fl_get(test_socket,"sockets")[0],
+        socket    = fl_get(test_socket,\"sockets\")[0],
         ox        = fl_conn_ox(socket),
         oy        = fl_conn_oy(socket),
         position  = fl_conn_pos(socket),
@@ -153,16 +132,16 @@ module __test__() {
                   * fl_planeAlign(X,Y,ox,oy)
       ) {
       multmatrix(M) socket(test_socket,VIEW_CONNECTORS,CONNECTORS_ONLY);
-    } else if (SOCKET_VIEW=="actual")
+    } else if (SOCKET_VIEW==\"actual\")
       transform() socket(test_socket,VIEW_CONNECTORS,CONNECTORS_ONLY);
   }
 
   if (VIEW_PLUG) {
-    if (PLUG_VIEW=="natural")
+    if (PLUG_VIEW==\"natural\")
       plug(test_plug,VIEW_CONNECTORS,CONNECTORS_ONLY);
-    else if (PLUG_VIEW=="canonical")
+    else if (PLUG_VIEW==\"canonical\")
       let(
-        plug      = fl_get(test_plug,"plugs")[0],
+        plug      = fl_get(test_plug,\"plugs\")[0],
         ox        = fl_conn_ox(plug),
         oy        = fl_conn_oy(plug),
         position  = fl_conn_pos(plug),
@@ -170,14 +149,15 @@ module __test__() {
                   * fl_planeAlign(X,Y,ox,oy)
       ) {
       multmatrix(M) plug(test_plug,VIEW_CONNECTORS,CONNECTORS_ONLY);
-    } else if (PLUG_VIEW=="actual") let(
-      plug      = fl_get(test_plug,"plugs")[0],
-      socket    = fl_get(test_socket,"sockets")[0]
+    } else if (PLUG_VIEW==\"actual\") let(
+      plug      = fl_get(test_plug,\"plugs\")[0],
+      socket    = fl_get(test_socket,\"sockets\")[0]
     ) transform() fl_connect(plug,socket) plug(test_plug,VIEW_CONNECTORS,CONNECTORS_ONLY);
   }
 
-  if (VIEW_SOCKET && SOCKET_VIEW=="actual" && VIEW_BALL)
+  if (VIEW_SOCKET && SOCKET_VIEW==\"actual\" && VIEW_BALL)
     %fl_sphere(r=SOCKET_DISTANCE);
 }
 
 __test__();
+"
