--- a/tests/foundation/2d-test.conf
+++ b/tests/foundation/2d-test.conf
@@ -1,6 +1,6 @@
 TEST_DESCRIPTION="2D foundation primitives tests."
 TEST_TEMPLATE="template-2d.scad"
-CAMERA="--camera=5,4.32,0,0,0,0,33.88"
+CAMERA="--camera 5,4.32,0,0,0,0,33.88"
 
 TEST_PROLOGUE="$PROLOGUE_2D"
 
