--- a/tests/foundation/hole-test.conf
+++ b/tests/foundation/hole-test.conf
@@ -1,36 +1,16 @@
-/*
- * Hole engine test
- *
- * NOTE: this file is generated automatically from 'template-3d.scad', any
- * change will be lost.
- *
- * Copyright © 2021, Giampiero Gabbiani <giampiero@gabbiani.org>
- *
- * SPDX-License-Identifier: GPL-3.0-or-later
- */
-
-
+TEST_DESCRIPTION="Hole engine test"
+TEST_TEMPLATE="template-3d.scad"
+# CAMERA="--camera 0,0,0,0,0,0,7"
+TEST_INCLUDES="
 include <../../lib/OFL/foundation/hole.scad>
 include <../../lib/OFL/foundation/util.scad>
 include <../../lib/OFL/vitamins/screw.scad>
-
-
-$fn            = 50;           // [3:100]
-// When true, debug statements are turned on
-$fl_debug      = false;
-// When true, disables PREVIEW corrections like FL_NIL
-$FL_RENDER     = false;
-// Default color for printable items (i.e. artifacts)
-$fl_filament   = "DodgerBlue"; // [DodgerBlue,Blue,OrangeRed,SteelBlue]
-// -2⇒none, -1⇒all, [0..)⇒max depth allowed
-$FL_TRACES     = -2;     // [-2:10]
-SHOW_LABELS     = false;
-SHOW_SYMBOLS    = false;
-
-
-
-
-
+"
+# TAB_PARAMETERS=""
+# TAB_Verbs=""
+TAB_Placement=""
+TAB_Direction=""
+TAB_TEST="
 /* [Holes] */
 
 // hole depth
@@ -44,12 +24,9 @@ THREE = false;
 FOUR  = false;
 FIVE  = false;
 SIX   = true;
-
-
-/* [Hidden] */
-
-// end of automatically generated code
-
+"
+TEST_PROLOGUE=""
+TEST_CODE="
 size  = 20;
 debug = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS);
 
@@ -84,12 +61,12 @@ holes = [
 ];
 
 enable  = fl_3d_AxisList([
-  if (ONE)    "+z",
-  if (TWO)    "-z",
-  if (THREE)  "+y",
-  if (FOUR)   "-x",
-  if (FIVE)   "+x",
-  if (SIX)    "-y",
+  if (ONE)    \"+z\",
+  if (TWO)    \"-z\",
+  if (THREE)  \"+y\",
+  if (FOUR)   \"-x\",
+  if (FIVE)   \"+x\",
+  if (SIX)    \"-y\",
 ]);
 
 fl_color()
@@ -98,3 +75,4 @@ fl_color()
     fl_holes(holes=holes,enable=enable);
   }
 fl_hole_debug(holes=holes,enable=enable,debug=debug);
+"
