--- a/tests/skeleton-2d.conf
+++ b/tests/skeleton-2d.conf
@@ -1,10 +1,33 @@
-TEST_DESCRIPTION="2d test description"
+# TEST_DESCRIPTION=""
+
 TEST_TEMPLATE="template-2d.scad"
+
 # CAMERA="--camera 5,4.32,0,0,0,0,33.88"
-TEST_INCLUDES=""
-# TAB_PARAMETERS=""
+
+PROJECTION="--projection=ortho"
+
+# TEST_INCLUDES=""
+
+# TAB_PARAMETERS="
+# \$fn            = 50;           // [3:100]
+# // When true, debug statements are turned on
+# \$fl_debug      = false;
+# // When true, disables PREVIEW corrections like FL_NIL
+# \$FL_RENDER     = false;
+# // Default color for printable items (i.e. artifacts)
+# \$fl_filament   = \"DodgerBlue\"; // [DodgerBlue,Blue,OrangeRed,SteelBlue]
+# // -2⇒none, -1⇒all, [0..)⇒max depth allowed
+# \$FL_TRACES     = -2;     // [-2:10]
+# SHOW_LABELS     = false;
+# SHOW_SYMBOLS    = false;
+# "
+
 # TAB_Verbs=""
+
 TAB_Placement="$Placement_2D"
-# TAB_TEST="[test settings]"
+
+# TAB_TEST=""
+
 TEST_PROLOGUE="$PROLOGUE_2D"
-TEST_CODE="// insert the test code here"
+
+# TEST_CODE=""
