--- a/tests/skeleton-3d.conf
+++ b/tests/skeleton-3d.conf
@@ -1,11 +1,52 @@
-TEST_DESCRIPTION="3d test description"
+# TEST_DESCRIPTION=""
+
 TEST_TEMPLATE="template-3d.scad"
+
 # CAMERA="--camera 0,0,0,0,0,0,7"
-TEST_INCLUDES=""
-# TAB_PARAMETERS=""
+
+# TEST_INCLUDES=""
+
+# TAB_PARAMETERS="
+# \$fn            = 50;           // [3:100]
+# // When true, debug statements are turned on
+# \$fl_debug      = false;
+# // When true, disables PREVIEW corrections like FL_NIL
+# \$FL_RENDER     = false;
+# // Default color for printable items (i.e. artifacts)
+# \$fl_filament   = \"DodgerBlue\"; // [DodgerBlue,Blue,OrangeRed,SteelBlue]
+# // -2⇒none, -1⇒all, [0..)⇒max depth allowed
+# \$FL_TRACES     = -2;     // [-2:10]
+# SHOW_LABELS     = false;
+# SHOW_SYMBOLS    = false;
+# "
+
 # TAB_Verbs=""
-# TAB_Placement=""
-# TAB_Direction=""
-# TAB_TEST="[test settings]"
-# TEST_PROLOGUE=""
-TEST_CODE="// insert the test code here"
+
+# TAB_Placement="
+# /* [3D Placement] */
+
+# X_PLACE = \"undef\";  // [undef,-1,0,+1]
+# Y_PLACE = \"undef\";  // [undef,-1,0,+1]
+# Z_PLACE = \"undef\";  // [undef,-1,0,+1]
+# "
+
+# TAB_Direction="
+# /* [Direction] */
+# DIR_NATIVE  = true;
+# // ARBITRARY direction vector
+# DIR_Z       = [0,0,1];  // [-1:0.1:+1]
+# // rotation around
+# DIR_R       = 0;        // [-360:360]
+# "
+
+# TAB_TEST=""
+
+# TEST_PROLOGUE="
+# direction = DIR_NATIVE    ? undef : [DIR_Z,DIR_R];
+# octant    = fl_parm_Octant(X_PLACE,Y_PLACE,Z_PLACE);
+# debug     = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS);
+
+# fl_status();
+# "
+
+# TEST_CODE=""
