--- a/tests/skeleton-nogui.conf
+++ b/tests/skeleton-nogui.conf
@@ -1,10 +1,7 @@
-TEST_DESCRIPTION="No gui test description"
+# TEST_DESCRIPTION=""
+
 TEST_TEMPLATE="template-nogui.scad"
-TEST_INCLUDES=""
 
-TAB_PARAMETERS=""
-TAB_Verbs=""
-TAB_Placement=""
-TAB_TEST=""
+# TEST_INCLUDES=""
 
-TEST_CODE="// insert the test code here"
+# TEST_CODE=""
