--- a/tests/artifacts/tnut-test.conf
+++ b/tests/artifacts/tnut-test.conf
@@ -15,8 +15,14 @@ TAB_Verbs="
 \$FL_AXES      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a bounding box containing the object
 \$FL_BBOX      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// layout of predefined drill shapes (like holes with predefined screw diameter)
+\$FL_DRILL     = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// adds a footprint to scene, usually a simplified ADD operation (see variable FL_ADD)
+\$FL_FOOTPRINT = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // layout of user passed accessories (like alternative screws)
 \$FL_LAYOUT    = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// mount shape through predefined screws
+\$FL_MOUNT     = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 "
 TAB_TEST="
 /* [T-slot nut] */
@@ -24,7 +30,7 @@ TAB_TEST="
 opening               = 6.4;
 in_width              = 10.0; // [0:0.1:20]
 length                = 20; // [0:30]
-screw_name            = \"M3_cs_cap_screw\"; // [M3_cs_cap_screw,M4_cs_cap_screw,M5_cs_cap_screw,M6_cs_cap_screw]
+screw_name            = \"M3_cap_screw\"; // [M3_cap_screw,M4_cap_screw,M5_cap_screw,M6_cap_screw]
 wall_thick            = 2.0;  // [0:0.1:1]
 base_thick            = 1.0;  // [0:0.1:3]
 cone_thick            = 2.0;  // [0:0.1:6]
@@ -34,29 +40,25 @@ countersink_tolerance = 0;    // [-1:0.1:1]
 
 countersink           = false;
 knut                  = false;
+
+DRILL_THICKNESS       = 10; // [1:1:20]
 "
 TEST_CODE="
-verbs=[
-  if (\$FL_ADD!=\"OFF\")       FL_ADD,
-  if (\$FL_ASSEMBLY!=\"OFF\")  FL_ASSEMBLY,
-  if (\$FL_AXES!=\"OFF\")      FL_AXES,
-  if (\$FL_BBOX!=\"OFF\")      FL_BBOX,
-  if (\$FL_LAYOUT!=\"OFF\")    FL_LAYOUT,
-];
-
-screw = screw_name==\"M3_cs_cap_screw\" ? M3_cs_cap_screw
-      : screw_name==\"M4_cs_cap_screw\" ? M4_cs_cap_screw
-      : screw_name==\"M5_cs_cap_screw\" ? M5_cs_cap_screw
-      : screw_name==\"M6_cs_cap_screw\" ? M6_cs_cap_screw
-      : undef;
-nop   = screw_name==\"M3_cs_cap_screw\" ? M3_sliding_t_nut
-      : screw_name==\"M4_cs_cap_screw\" ? M4_sliding_t_nut
-      : screw_name==\"M5_cs_cap_screw\" ? M5_sliding_t_nut
-      : screw_name==\"M6_cs_cap_screw\" ? M6_sliding_t_nut
-      : undef;
+screw = fl_switch(screw_name,[
+  [\"M3_cap_screw\", M3_cap_screw],
+  [\"M4_cap_screw\", M4_cap_screw],
+  [\"M5_cap_screw\", M5_cap_screw],
+  [\"M6_cap_screw\", M6_cap_screw]
+]);
+verbs = fl_verbList([FL_ADD,FL_ASSEMBLY,FL_AXES,FL_BBOX,FL_DRILL,FL_FOOTPRINT,FL_LAYOUT,FL_MOUNT]);
 
 thick = wall_thick+base_thick+cone_thick;
 nut   = fl_TNut(opening,[in_width,length],[wall_thick,base_thick,cone_thick],screw,knut);
 
-fl_tnut(verbs,nut,[nut_tolerance,hole_tolerance,countersink_tolerance],countersink,debug,direction,octant);
+fl_tnut(verbs,nut,
+  tolerance=[nut_tolerance,hole_tolerance,countersink_tolerance],
+  countersink=countersink,
+  dri_thick=DRILL_THICKNESS,
+  debug=debug,direction=direction,octant=octant
+) fl_cylinder([FL_ADD,FL_AXES],h=10,d=\$hole_d,direction=[\$hole_n,0],\$FL_AXES=\$FL_LAYOUT);
 "
