--- a/tests/foundation/3d-test.conf
+++ b/tests/foundation/3d-test.conf
@@ -7,11 +7,11 @@ TAB_Verbs="
 /* [Supported verbs] */
 
 // adds shapes to scene.
-ADD       = \"ON\";   // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+\$FL_ADD   = \"ON\";   // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds local reference axes
-AXES      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+\$FL_AXES  = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a bounding box containing the object
-BBOX      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+\$FL_BBOX  = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 "
 TAB_TEST="
 /* [3ds] */
@@ -26,17 +26,13 @@ SIZE    = [1,2,3];
 N     = 3; // [3:10]
 "
 TEST_CODE="
-verbs=[
-  if (ADD!=\"OFF\")   FL_ADD,
-  if (AXES!=\"OFF\")  FL_AXES,
-  if (BBOX!=\"OFF\")  FL_BBOX,
-];
+verbs = fl_verbList([FL_ADD,FL_AXES,FL_BBOX]);
 
 fl_trace(\"octant\",octant);
 
-if      (SHAPE == \"cube\"    )  fl_cube(verbs,size=SIZE,debug=debug,octant=octant,direction=direction,\$FL_ADD=ADD,\$FL_AXES=AXES,\$FL_BBOX=BBOX);
-else if (SHAPE == \"sphere\"  )  fl_sphere(verbs,d=SIZE,debug=debug,octant=octant,direction=direction,\$FL_ADD=ADD,\$FL_AXES=AXES,\$FL_BBOX=BBOX);
-else if (SHAPE == \"cylinder\")  fl_cylinder(verbs,d1=SIZE.x,d2=SIZE.y,h=SIZE.z,debug=debug,octant=octant,direction=direction,\$FL_ADD=ADD,\$FL_AXES=AXES,\$FL_BBOX=BBOX);
-else if (SHAPE == \"prism\"   )  fl_prism(verbs,n=N,l1=SIZE.x,l2=SIZE.y,h=SIZE.z,debug=debug,octant=octant,direction=direction,\$FL_ADD=ADD,\$FL_AXES=AXES,\$FL_BBOX=BBOX);
-else if (SHAPE == \"pyramid\" )  fl_pyramid(verbs,[[-1,-1],[+1,-1],[+1,+1],[-1,+1]], [0,0,2],debug=debug,octant=octant,direction=direction,\$FL_ADD=ADD,\$FL_AXES=AXES,\$FL_BBOX=BBOX);
+if      (SHAPE == \"cube\"    )  fl_cube(verbs,size=SIZE,debug=debug,octant=octant,direction=direction);
+else if (SHAPE == \"sphere\"  )  fl_sphere(verbs,d=SIZE,debug=debug,octant=octant,direction=direction);
+else if (SHAPE == \"cylinder\")  fl_cylinder(verbs,d1=SIZE.x,d2=SIZE.y,h=SIZE.z,debug=debug,octant=octant,direction=direction);
+else if (SHAPE == \"prism\"   )  fl_prism(verbs,n=N,l1=SIZE.x,l2=SIZE.y,h=SIZE.z,debug=debug,octant=octant,direction=direction);
+else if (SHAPE == \"pyramid\" )  fl_pyramid(verbs,[[-1,-1],[+1,-1],[+1,+1],[-1,+1]], [0,0,2],debug=debug,octant=octant,direction=direction);
 "
