Managed drill thickness

--- a/tests/vitamins/knurl_nut-test.conf
+++ b/tests/vitamins/knurl_nut-test.conf
@@ -57,8 +57,9 @@ TAB_Verbs="
 TAB_TEST="
 /* [Knurl nut] */
 
-SHOW        = \"ALL\"; // [ALL, Linear M2x4mm,Linear M2x6mm,Linear M2x8mm,Linear M2x10mm,Linear M3x4mm,Linear M3x6mm,Linear M3x8mm,Linear M3x10mm,Linear M4x4mm,Linear M4x6mm,Linear M4x8mm,Linear M4x10mm,Linear M5x6mm,Linear M5x8mm,Linear M5x10mm,Spiral M2x4mm,Spiral M2p5x5.7mm,Spiral M3x5.7mm,Spiral M4x8.1mm,Spiral M5x9.5mm,Spiral M6x12.7mm,Spiral M8x12.7mm]
+SHOW        = \"ALL\";  // [ALL, Linear M2x4mm,Linear M2x6mm,Linear M2x8mm,Linear M2x10mm,Linear M3x4mm,Linear M3x6mm,Linear M3x8mm,Linear M3x10mm,Linear M4x4mm,Linear M4x6mm,Linear M4x8mm,Linear M4x10mm,Linear M5x6mm,Linear M5x8mm,Linear M5x10mm,Spiral M2x4mm,Spiral M2p5x5.7mm,Spiral M3x5.7mm,Spiral M4x8.1mm,Spiral M5x9.5mm,Spiral M6x12.7mm,Spiral M8x12.7mm]
 PRODUCT_TAG = \"ANY\";  // [ANY,linear thread,double spiral thread]
+DRILL_THICK = 0;
 "
 
 # TEST_PROLOGUE="
@@ -97,7 +98,7 @@ obj   = fl_switch(SHOW,cases=[
 verbs = fl_verbList([FL_ADD,FL_ASSEMBLY,FL_AXES,FL_BBOX,FL_DRILL]);
 
 if (obj)
-  fl_knut(verbs,obj,octant=octant,direction=direction);
+  fl_knut(verbs,obj,dri_thick=DRILL_THICK,octant=octant,direction=direction);
 else {
   // filter items by the product tag
   items = PRODUCT_TAG==\"ANY\" ? FL_KNUT_DICT : fl_knut_search(tag=PRODUCT_TAG,best=false);
@@ -111,7 +112,7 @@ else {
           label(str(\"M\",fl_knut_nominal(row[0])),halign=\"center\");
         fl_layout(axis=+X,gap=3,types=row)
           // echo(fl_name(\$item))
-            fl_knut(verbs,\$item,octant=octant,direction=direction);
+            fl_knut(verbs,\$item,dri_thick=DRILL_THICK,octant=octant,direction=direction);
       }
     }
 }
