--- a/tests/vitamins/screw-test.conf
+++ b/tests/vitamins/screw-test.conf
@@ -60,14 +60,16 @@ TAB_Verbs="
 TAB_TEST="
 /* [Screw] */
 
-SCREW     = \"M2_cap_screw\"; // [No632_pan_screw,M2_cap_screw,M2_cs_cap_screw,M2_dome_screw,M2p5_cap_screw,M2p5_pan_screw,M3_cap_screw,M3_cs_cap_screw,M3_dome_screw,M3_grub_screw,M3_hex_screw,M3_low_cap_screw,M3_pan_screw,M4_cap_screw,M4_cs_cap_screw,M4_dome_screw,M4_grub_screw,M4_hex_screw,M4_pan_screw,M5_cap_screw,M5_cs_cap_screw,M5_dome_screw,M5_hex_screw,M5_pan_screw,M6_cap_screw,M6_cs_cap_screw,M6_hex_screw,M6_pan_screw,M8_cap_screw,M8_hex_screw,No2_screw,No4_screw,No6_cs_screw,No6_screw,No8_screw]
-FIXED_LEN = 0;
+SCREW       = \"ALL\";  // [ALL, No632_pan_screw,M2_cap_screw,M2_cs_cap_screw,M2_dome_screw,M2p5_cap_screw,M2p5_pan_screw,M3_cap_screw,M3_cs_cap_screw,M3_dome_screw,M3_grub_screw,M3_hex_screw,M3_low_cap_screw,M3_pan_screw,M4_cap_screw,M4_cs_cap_screw,M4_dome_screw,M4_grub_screw,M4_hex_screw,M4_pan_screw,M5_cap_screw,M5_cs_cap_screw,M5_dome_screw,M5_hex_screw,M5_pan_screw,M6_cap_screw,M6_cs_cap_screw,M6_hex_screw,M6_pan_screw,M8_cap_screw,M8_hex_screw,No2_screw,No4_screw,No6_cs_screw,No6_screw,No8_screw]
+FIXED_LEN   = 0;
 // thickness
-T       = 10;   // [1:0.1:20]
-WASHER  = \"no\"; // [no,default,penny,nylon]
-XWASHER = \"no\"; // [no,spring,star]
-NWASHER = false;
-NUT     = \"no\"; // [no,default,nyloc]
+T           = 10;     // [1:0.1:20]
+WASHER      = \"no\";   // [no,default,penny,nylon]
+XWASHER     = \"no\";   // [no,spring,star]
+// add a default washer before the nut
+NUT_WASHER  = false;
+NUT         = \"no\";   // [no,default,nyloc]
+HEAD_TYPE   = \"ANY\";  // [ANY, cap, pan, cs, hex, grub, cs cap, dome]
 "
 
 # TEST_PROLOGUE="
@@ -80,49 +82,90 @@ NUT     = \"no\"; // [no,default,nyloc]
 
 TEST_CODE="
 verbs = fl_verbList([FL_ADD,FL_ASSEMBLY,FL_AXES,FL_BBOX,FL_DRILL,FL_FOOTPRINT]);
-screw = SCREW==\"No632_pan_screw\" ? No632_pan_screw
-      : SCREW==\"M2_cap_screw\"    ? M2_cap_screw
-      : SCREW==\"M2_cs_cap_screw\" ? M2_cs_cap_screw
-      : SCREW==\"M2_dome_screw\"   ? M2_dome_screw
-      : SCREW==\"M2p5_cap_screw\"  ? M2p5_cap_screw
-      : SCREW==\"M2p5_pan_screw\"  ? M2p5_pan_screw
-      : SCREW==\"M3_cap_screw\"    ? M3_cap_screw
-      : SCREW==\"M3_cs_cap_screw\" ? M3_cs_cap_screw
-      : SCREW==\"M3_dome_screw\"   ? M3_dome_screw
-      : SCREW==\"M3_grub_screw\"   ? M3_grub_screw
-      : SCREW==\"M3_hex_screw\"    ? M3_hex_screw
-      : SCREW==\"M3_low_cap_screw\"? M3_low_cap_screw
-      : SCREW==\"M3_pan_screw\"    ? M3_pan_screw
-      : SCREW==\"M4_cap_screw\"    ? M4_cap_screw
-      : SCREW==\"M4_cs_cap_screw\" ? M4_cs_cap_screw
-      : SCREW==\"M4_dome_screw\"   ? M4_dome_screw
-      : SCREW==\"M4_grub_screw\"   ? M4_grub_screw
-      : SCREW==\"M4_hex_screw\"    ? M4_hex_screw
-      : SCREW==\"M4_pan_screw\"    ? M4_pan_screw
-      : SCREW==\"M5_cap_screw\"    ? M5_cap_screw
-      : SCREW==\"M5_cs_cap_screw\" ? M5_cs_cap_screw
-      : SCREW==\"M5_dome_screw\"   ? M5_dome_screw
-      : SCREW==\"M5_hex_screw\"    ? M5_hex_screw
-      : SCREW==\"M5_pan_screw\"    ? M5_pan_screw
-      : SCREW==\"M6_cap_screw\"    ? M6_cap_screw
-      : SCREW==\"M6_cs_cap_screw\" ? M6_cs_cap_screw
-      : SCREW==\"M6_hex_screw\"    ? M6_hex_screw
-      : SCREW==\"M6_pan_screw\"    ? M6_pan_screw
-      : SCREW==\"M8_cap_screw\"    ? M8_cap_screw
-      : SCREW==\"M8_hex_screw\"    ? M8_hex_screw
-      : SCREW==\"No2_screw\"       ? No2_screw
-      : SCREW==\"No4_screw\"       ? No4_screw
-      : SCREW==\"No6_cs_screw\"    ? No6_cs_screw
-      : SCREW==\"No6_screw\"       ? No6_screw
-      : SCREW==\"No8_screw\"       ? No8_screw
-      : undef;
-assert(screw!=undef);
+screw = fl_switch(SCREW,  cases=[
+  [\"No632_pan_screw\" , No632_pan_screw  ],
+  [\"M2_cap_screw\"    , M2_cap_screw     ],
+  [\"M2_cs_cap_screw\" , M2_cs_cap_screw  ],
+  [\"M2_dome_screw\"   , M2_dome_screw    ],
+  [\"M2p5_cap_screw\"  , M2p5_cap_screw   ],
+  [\"M2p5_pan_screw\"  , M2p5_pan_screw   ],
+  [\"M3_cap_screw\"    , M3_cap_screw     ],
+  [\"M3_cs_cap_screw\" , M3_cs_cap_screw  ],
+  [\"M3_dome_screw\"   , M3_dome_screw    ],
+  [\"M3_grub_screw\"   , M3_grub_screw    ],
+  [\"M3_hex_screw\"    , M3_hex_screw     ],
+  [\"M3_low_cap_screw\", M3_low_cap_screw ],
+  [\"M3_pan_screw\"    , M3_pan_screw     ],
+  [\"M4_cap_screw\"    , M4_cap_screw     ],
+  [\"M4_cs_cap_screw\" , M4_cs_cap_screw  ],
+  [\"M4_dome_screw\"   , M4_dome_screw    ],
+  [\"M4_grub_screw\"   , M4_grub_screw    ],
+  [\"M4_hex_screw\"    , M4_hex_screw     ],
+  [\"M4_pan_screw\"    , M4_pan_screw     ],
+  [\"M5_cap_screw\"    , M5_cap_screw     ],
+  [\"M5_cs_cap_screw\" , M5_cs_cap_screw  ],
+  [\"M5_dome_screw\"   , M5_dome_screw    ],
+  [\"M5_hex_screw\"    , M5_hex_screw     ],
+  [\"M5_pan_screw\"    , M5_pan_screw     ],
+  [\"M6_cap_screw\"    , M6_cap_screw     ],
+  [\"M6_cs_cap_screw\" , M6_cs_cap_screw  ],
+  [\"M6_hex_screw\"    , M6_hex_screw     ],
+  [\"M6_pan_screw\"    , M6_pan_screw     ],
+  [\"M8_cap_screw\"    , M8_cap_screw     ],
+  [\"M8_hex_screw\"    , M8_hex_screw     ],
+  [\"No2_screw\"       , No2_screw        ],
+  [\"No4_screw\"       , No4_screw        ],
+  [\"No6_cs_screw\"    , No6_cs_screw     ],
+  [\"No6_screw\"       , No6_screw        ],
+  [\"No8_screw\"       , No8_screw        ]
+]);
 
-let(
-  d      = fl_screw_nominal(screw),
-  hd_typ = screw_head_type(screw),
-  found  = fl_screw_search(d=d, head_type=hd_typ)
-) assert(found && len(found)>=1)
-//   echo(found=found)
-  fl_screw(verbs,screw,thick=T,washer=WASHER,nut=NUT,xwasher=XWASHER,nwasher=NWASHER,len=FIXED_LEN?FIXED_LEN:undef,octant=octant,direction=direction);
+// enable nut washer only when nut is required
+nut_washer  = NUT!=\"no\" && NUT_WASHER;
+
+h_filter  = fl_switch(HEAD_TYPE,[[\"cap\",hs_cap], [\"pan\",hs_pan], [\"cs\",hs_cs], [\"hex\",hs_hex], [\"grub\",hs_grub], [\"cs cap\",hs_cs_cap], [\"dome\",hs_dome]]);
+n_filter  = NUT!=\"no\";
+
+if (screw)
+  fl_screw(verbs,screw,thick=T,washer=WASHER,nut=NUT,xwasher=XWASHER,nwasher=nut_washer,len=FIXED_LEN?FIXED_LEN:undef,octant=octant,direction=direction);
+else {
+  // ordered list of existing screw sizes
+  sizes     = fl_list_sort(fl_list_unique([for(s=FL_SCREW_DICT) fl_screw_nominal(s)]));
+  // filter items with/without nuts according to customizer input
+  items     = fl_screw_search(head_type=h_filter,nut=n_filter,washer=WASHER);
+  // build a dictionary organized by rows of screws with same nominal size
+  dict      = fl_dict_organize(items,sizes,function(screw) fl_screw_nominal(screw));
+  // for each not empty row calculates the offsets along Y axis
+  y_coords  = let(
+    y_offsets = [for(i=[0:len(dict)-1]) (i>0 && dict[i-1]) ? 20 : 0]
+  ) fl_cumulativeSum(y_offsets);
+
+  for(i=[0:len(dict)-1]) let(row=dict[i])
+    if (row) { // not empty empty row
+      wrappers  = [for(nop=row) Wrapper(nop)];
+      // row movement along Y axis
+      translate(Y(y_coords[i])) {
+        translate(-X(12))
+          label(str(\"⌀\",fl_screw_nominal(row[0])),halign=\"center\");
+        // horizontal layout of row screws
+        fl_layout(axis=+X,gap=3,types=wrappers)
+          fl_screw(verbs,fl_screw(\$item),thick=T,washer=WASHER,nut=NUT,xwasher=XWASHER,nwasher=nut_washer,len=FIXED_LEN?FIXED_LEN:undef,octant=octant,direction=direction);
+      }
+    }
+}
+
+function Wrapper(nop) = let(
+  length  = FIXED_LEN ? FIXED_LEN : fl_screw_l(nop,len=FIXED_LEN?FIXED_LEN:undef,thick=T,washer=WASHER,nut=NUT,xwasher=XWASHER,nwasher=nut_washer)
+) [
+  fl_screw(value=nop),
+  fl_bb_corners(value=fl_bb_screw(nop,length)),
+];
+
+//! Draw text that always faces the camera
+module label(str, scale = 0.25, valign = \"baseline\", halign = \"left\")
+  color(\"black\")
+    rotate(\$vpr != [0, 0, 0] ? \$vpr : [70, 0, 315])
+      linear_extrude(NIL)
+        scale(scale)
+          text(str, valign = valign, halign = halign, font=\"Symbola:style=Regular\");
 "
