spacer fix and optimizations

--- a/tests/artifacts/spacer-test.conf
+++ b/tests/artifacts/spacer-test.conf
@@ -6,6 +6,7 @@ TEST_TEMPLATE="template-3d.scad"
 
 TEST_INCLUDES="
 include <../../lib/OFL/artifacts/spacer.scad>
+include <../../lib/OFL/vitamins/countersinks.scad>
 "
 
 # TAB_PARAMETERS="
@@ -64,23 +65,20 @@ TAB_TEST="
 /* [FACTORY] */
 
 // height
-H     = 4;  // [0.1:0.1:10]
+H     = 9;  // [0.1:0.1:10]
 // external radius
-R     = 2;  // [0.1:0.1:10]
+R     = 6;  // [0.1:0.1:10]
 
-SCREW_SIZE  = 2;         // [2,2.5,3,4,5,6,8]
-// when true the spacer must host a screw
-SCREW       = true;
-// when true tries to find a screw fitting knurl nut
-KNUT  = false;
+SCREW  = \"4\";                     // [none,2,3,4,5]
+KNUT   = \"double spiral thread\";  // [none,linear thread,double spiral thread]
 // no fillet if zero
-FILLET  = 0;  // [0:0.1:5]
+FILLET  = 1;  // [0:0.1:5]
 
 ANCHOR_X_POS  = false;
 ANCHOR_X_NEG  = false;
 ANCHOR_Y_POS  = false;
 ANCHOR_Y_NEG  = false;
-ANCHOR_Z_NEG  = false;
+ANCHOR_Z_NEG  = true;
 
 /* [TEST] */
 
@@ -125,15 +123,19 @@ thickness = let(t= [
   if (THICK_POSITIVE) +THICK_POSITIVE
 ]) t ? t : undef;
 
-screw = SCREW ? find_screw(hs_cap,SCREW_SIZE) : undef;
-knut  = screw ? KNUT : undef;
+screw = SCREW!=\"none\" ? find_screw(hs_cap,atoi(SCREW)) : undef;
+knut  = KNUT!=\"none\"  ?
+          screw ? fl_knut_search(screw=screw,thick=H,tag=KNUT) : echo(\"***WARN***: knut ignored since no screw provided\") undef
+        : undef;
+cs    = screw ? fl_cs_search(d=fl_screw_nominal(screw))[0] : undef;
 dirs  = fl_3d_AxisList([LAYOUT_DIRS]);
 
-if (SCREW && !screw)
-  echo(str(\"***WARN***: no \",SCREW_TYPE,\" screw M\",SCREW_SIZE,\" found.\"));
-if (KNUT && !knut)
-  echo(str(\"***WARN***: knurl nut set to false because no nut found.\"));
+if (SCREW!=\"none\" && !screw)
+  echo(str(\"***WARN***: no \",SCREW_TYPE,\" screw M\",SCREW,\" found.\"));
+if (KNUT!=\"none\" && screw && !knut)
+  echo(str(\"***WARN***: no knurl nut suitable for M\",SCREW,\" found.\"));
 
 fl_spacer(verbs,H,R,screw=screw,knut=knut,thick=thickness,lay_direction=dirs,anchor=anchor,fillet=FILLET,octant=octant,direction=direction)
-  fl_cylinder([FL_ADD,FL_AXES],h=5,d2=0,d1=fl_screw_nominal(\$spc_screw),direction=[\$spc_director,0],\$FL_ADD=\$FL_LAYOUT,\$FL_AXES=\"ON\");
+    translate(\$spc_director*(\$spc_thick-2xNIL))
+      fl_countersink(type=cs,direction=[\$spc_director,0],\$FL_ADD=\$FL_LAYOUT);
 "
