--- a/tests/vitamins/countersinks-test.conf
+++ b/tests/vitamins/countersinks-test.conf
@@ -7,6 +7,7 @@ TEST_TEMPLATE="template-3d.scad"
 TEST_INCLUDES="
 include <../../lib/OFL/foundation/unsafe_defs.scad>
 include <../../lib/OFL/vitamins/countersinks.scad>
+include <../../lib/OFL/vitamins/screw.scad>
 
 use <../../lib/OFL/foundation/3d-engine.scad>
 "
@@ -56,7 +57,7 @@ TAB_Verbs="
 TAB_TEST="
 /* [Countersink] */
 
-TOLERANCE = 0;  // [-1:0.1:1]
+TOLERANCE = 0;  // [0:0.1:1]
 // -1 for all, the ordinal dictionary member otherwise
 SHOW    = -1;   // [-1:1:8]
 GAP     = 5;
@@ -76,10 +77,10 @@ if (SHOW>-1)
   let(
     cs      = FL_CS_DICT[SHOW],
     nominal = fl_cs_nominal(cs),
-    found   = fl_cs_search(nominal)
-  ) assert(found==cs)
+    found   = fl_cs_search(d=nominal)[0]
+  ) assert(found==cs,found)
     fl_countersink(verbs,cs,tolerance=TOLERANCE,octant=octant,direction=direction);
 else
   fl_layout(axis=X,gap=GAP,types=FL_CS_DICT)
-    fl_countersink(verbs,FL_CS_DICT[\$i],tolerance=TOLERANCE,octant=octant,direction=direction);
+    fl_countersink(verbs,\$item,tolerance=TOLERANCE,octant=octant,direction=direction);
 "
