--- a/tests/artifacts/box-test.conf
+++ b/tests/artifacts/box-test.conf
@@ -127,5 +127,5 @@ fl_box(verbs,
   lay_octant=lay_octant,
   octant=octant,direction=direction
 )
-  fl_sphere(FL_AXES,r=10,$FL_AXES="ON");
+  fl_sphere(FL_AXES,r=10,\$FL_AXES=\"ON\");
 "
