Fixed knurl_nuts test file name, implemented a decent and usable fl_knut_find() function

--- a/tests/vitamins/knurl_nuts-test.conf
+++ b/tests/vitamins/knurl_nuts-test.conf
@@ -5,7 +5,10 @@ TEST_TEMPLATE="template-3d.scad"
 # CAMERA="--camera 0,0,0,0,0,0,7"
 
 TEST_INCLUDES="
+include <../../lib/OFL/vitamins/countersinks.scad>
 include <../../lib/OFL/vitamins/knurl_nuts.scad>
+
+use <../../lib/OFL/foundation/label.scad>
 "
 
 # TAB_PARAMETERS="
@@ -35,6 +38,8 @@ TAB_Verbs="
 \$FL_BBOX      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // layout of predefined drill shapes (like holes with predefined screw diameter)
 \$FL_DRILL     = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// layout of user passed accessories (like alternative screws)
+\$FL_LAYOUT    = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 "
 
 # TAB_Placement="
@@ -58,7 +63,7 @@ TAB_TEST="
 /* [Knurl nut] */
 
 SHOW        = \"ALL\";  // [ALL, Linear M2x4mm,Linear M2x6mm,Linear M2x8mm,Linear M2x10mm,Linear M3x4mm,Linear M3x6mm,Linear M3x8mm,Linear M3x10mm,Linear M4x4mm,Linear M4x6mm,Linear M4x8mm,Linear M4x10mm,Linear M5x6mm,Linear M5x8mm,Linear M5x10mm,Spiral M2x4mm,Spiral M2p5x5.7mm,Spiral M3x5.7mm,Spiral M4x8.1mm,Spiral M5x9.5mm,Spiral M6x12.7mm,Spiral M8x12.7mm]
-PRODUCT_TAG = \"ANY\";  // [ANY,linear thread,double spiral thread]
+THREAD_TYPE = \"ANY\";  // [ANY,linear,spiral]
 // FL_DRILL on Z axis
 DRILL_THICK = 0;        // [-10:0.1:10]
 "
@@ -72,63 +77,57 @@ DRILL_THICK = 0;        // [-10:0.1:10]
 # "
 
 TEST_CODE="
-//! Draw text that always faces the camera
-module label(str, scale = 0.25, valign = \"baseline\", halign = \"left\")
-  color(\"black\")
-    rotate(\$vpr != [0, 0, 0] ? \$vpr : [70, 0, 315])
-      linear_extrude(NIL)
-        scale(scale)
-          text(str, valign = valign, halign = halign, font=\"Symbola:style=Regular\");
+verbs         = fl_verbList([FL_ADD,FL_ASSEMBLY,FL_AXES,FL_BBOX,FL_DRILL,FL_LAYOUT]);
+one           = let(all=fl_knut_dict())
+                  fl_switch(SHOW,fl_list_pack(fl_knut_names(all),all));
+scr_inventory = screw_lists[0]; // cap screws only from NopSCADlib
+drill_t       = [DRILL_THICK];
+thread_type   = THREAD_TYPE!=\"ANY\" ? THREAD_TYPE : undef;
 
-verbs = fl_verbList([FL_ADD,FL_ASSEMBLY,FL_AXES,FL_BBOX,FL_DRILL]);
-obj   = fl_switch(SHOW,cases=[
-  [\"Linear M2x4mm\",     FL_KNUT_LINEAR_M2x4     ],
-  [\"Linear M2x6mm\",     FL_KNUT_LINEAR_M2x6     ],
-  [\"Linear M2x8mm\",     FL_KNUT_LINEAR_M2x8     ],
-  [\"Linear M2x10mm\",    FL_KNUT_LINEAR_M2x10    ],
-  [\"Linear M3x4mm\",     FL_KNUT_LINEAR_M3x4     ],
-  [\"Linear M3x6mm\",     FL_KNUT_LINEAR_M3x6     ],
-  [\"Linear M3x8mm\",     FL_KNUT_LINEAR_M3x8     ],
-  [\"Linear M3x10mm\",    FL_KNUT_LINEAR_M3x10    ],
-  [\"Linear M4x4mm\",     FL_KNUT_LINEAR_M4x4     ],
-  [\"Linear M4x6mm\",     FL_KNUT_LINEAR_M4x6     ],
-  [\"Linear M4x8mm\",     FL_KNUT_LINEAR_M4x8     ],
-  [\"Linear M4x10mm\",    FL_KNUT_LINEAR_M4x10    ],
-  [\"Linear M5x6mm\",     FL_KNUT_LINEAR_M5x6     ],
-  [\"Linear M5x8mm\",     FL_KNUT_LINEAR_M5x8     ],
-  [\"Linear M5x10mm\",    FL_KNUT_LINEAR_M5x10    ],
-  [\"Spiral M2x4mm\",     FL_KNUT_SPIRAL_M2x4     ],
-  [\"Spiral M2p5x5.7mm\", FL_KNUT_SPIRAL_M2p5x5p7 ],
-  [\"Spiral M3x5.7mm\",   FL_KNUT_SPIRAL_M3x5p7   ],
-  [\"Spiral M4x8.1mm\",   FL_KNUT_SPIRAL_M4x8p1   ],
-  [\"Spiral M5x9.5mm\",   FL_KNUT_SPIRAL_M5x9p5   ],
-  [\"Spiral M6x12.7mm\",  FL_KNUT_SPIRAL_M6x12p7  ],
-  [\"Spiral M8x12.7mm\",  FL_KNUT_SPIRAL_M8x12p7  ]
-]);
-drill_t = [DRILL_THICK];
-
-if (obj)
-  fl_knut(verbs,obj,dri_thick=drill_t,octant=octant,direction=direction);
-else {
-  // filter items by the product tag
-  items = PRODUCT_TAG==\"ANY\" ? FL_KNUT_DICT : fl_knut_search(tag=PRODUCT_TAG,best=false);
-  // build a dictionary with rows constituted by items with equal internal thread
-  dict  = fl_dict_organize(items,[2:0.5:8],function(nut) fl_knut_nominal(nut));
+if (one) {
+  fl_knut(verbs,one,dri_thick=drill_t,octant=octant,direction=direction) {
+    if (\$knut_verb==FL_ASSEMBLY) {
+      test_screw(\$knut_obj,\$knut_thickness,\$FL_ADD=\$FL_ASSEMBLY);
+    } else if (\$knut_verb==FL_LAYOUT) {
+      translate(+Z(\$knut_thick[1]))
+        fl_countersink(type=fl_cs_search(d=\$knut_nominal)[0],octant=+Z,direction=[+Z,0],\$FL_ADD=\$FL_LAYOUT);
+      translate(-Z(\$knut_length-\$knut_thick[0]))
+        fl_countersink(type=fl_cs_search(d=\$knut_nominal)[0],octant=+Z,direction=[-Z,0],\$FL_ADD=\$FL_LAYOUT);
+    }
+  }
+} else {
+  // filter items by the thread type
+  items = fl_knut_find(thread=thread_type);
+  // organize items by rows with same nominal size
+  dict  = fl_dict_organize(items,[2:0.5:8],function(nut) fl_nominal(nut));
   // for each not empty row calculates the offsets along Y axis
   y_coords  = let(
     y_offsets = [for(i=[0:len(dict)-1]) (i>0 && dict[i]) ? 12 : 0]
   ) fl_cumulativeSum(y_offsets);
-
   for(i=[0:len(dict)-1]) let(row=dict[i],l=len(row))
     if (row) { // no empty row
       // row movement along Y axis
       translate(Y(y_coords[i])) {
-        translate(-X(12))
-          label(str(\"M\",fl_knut_nominal(row[0])),halign=\"center\");
-        // horizontal layout of row screws
-        fl_layout(axis=+X,gap=3,types=row)
-          fl_knut(verbs,\$item,dri_thick=drill_t,octant=octant,direction=direction);
+        fl_lookAtMe()
+          translate(-X(7))
+            fl_label(string=[\"M\",fl_nominal(row[0])],fg=\"black\",size=2,octant=O);
+        // row horizontal layout
+        fl_layout(axis=+X,gap=3,types=row,\$FL_LAYOUT=\$FL_ADD)
+          fl_knut(verbs,\$item,dri_thick=drill_t,octant=octant,direction=direction) {
+            if (\$knut_verb==FL_ASSEMBLY) {
+              test_screw(\$knut_obj,\$knut_thickness);
+            } else if (\$knut_verb==FL_LAYOUT) let(cs=fl_cs_search(d=\$knut_nominal)[0]) {
+              translate(+Z(\$knut_thick[1]))
+                fl_countersink(type=cs,octant=+Z,direction=[+Z,0],\$FL_ADD=\$FL_LAYOUT);
+              translate(-Z(\$knut_length-\$knut_thick[0]))
+                fl_countersink(type=cs,octant=+Z,direction=[-Z,0],\$FL_ADD=\$FL_LAYOUT);
+            }
+          }
       }
     }
 }
+
+module test_screw(knut,length) let(
+  screw = fl_knut_screws(knut,scr_inventory)[0]
+) fl_screw(type=screw,len=length);
 "
