--- a/tests/artifacts/spacer-test.conf
+++ b/tests/artifacts/spacer-test.conf
@@ -65,12 +65,12 @@ TAB_TEST="
 /* [FACTORY] */
 
 // height
-H     = 9;  // [0.1:0.1:10]
+H     = 9;  // [0.1:0.1:15]
 // external radius
 R     = 6;  // [0.1:0.1:10]
 
-SCREW  = \"4\";                     // [none,2,3,4,5]
-KNUT   = \"double spiral thread\";  // [none,linear thread,double spiral thread]
+SCREW  = \"4\";       // [none,2,2.5,3,4,5,6,8]
+KNUT_TYPE   = \"spiral\";  // [none, linear, spiral]
 // no fillet if zero
 FILLET  = 1;  // [0:0.1:5]
 
@@ -123,16 +123,19 @@ thickness = let(t= [
   if (THICK_POSITIVE) +THICK_POSITIVE
 ]) t ? t : undef;
 
-screw = SCREW!=\"none\" ? find_screw(hs_cap,atoi(SCREW)) : undef;
-knut  = KNUT!=\"none\"  ?
-          screw ? fl_knut_search(screw=screw,thick=H,tag=KNUT) : echo(\"***WARN***: knut ignored since no screw provided\") undef
+scr_inventory = screw_lists[0]; // cap screws only from NopSCADlib
+screw         = SCREW!=\"none\" ? fl_list_filter(scr_inventory,fl_screw_byNominal(fl_atof(SCREW)))[0] : undef;
+knut  = KNUT_TYPE!=\"none\" ?
+          screw ?
+            fl_knut_shortest(fl_knut_find(length_less_equal=H,thread=KNUT_TYPE,nominal=SCREW))
+          : echo(\"***WARN***: knut ignored since no screw provided\") undef
         : undef;
 cs    = screw ? fl_cs_search(d=fl_screw_nominal(screw))[0] : undef;
 dirs  = fl_3d_AxisList([LAYOUT_DIRS]);
 
 if (SCREW!=\"none\" && !screw)
   echo(str(\"***WARN***: no \",SCREW_TYPE,\" screw M\",SCREW,\" found.\"));
-if (KNUT!=\"none\" && screw && !knut)
+if (KNUT_TYPE!=\"none\" && screw && !knut)
   echo(str(\"***WARN***: no knurl nut suitable for M\",SCREW,\" found.\"));
 
 fl_spacer(verbs,H,R,screw=screw,knut=knut,thick=thickness,lay_direction=dirs,anchor=anchor,fillet=FILLET,octant=octant,direction=direction)
